Changed Profile Mappings

--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -183,7 +183,7 @@
 					<ul class="dropdown-menu dropdown-user">
 
 						<li><a
-							th:href="@{/users/userProfile/} + ${#authentication.principal.userId}"><i
+							th:href="@{/user/userProfile/} + ${#authentication.principal.userId}"><i
 								class="fa fa-user fa-fw"></i> User Profile</a></li>
 						<li><a th:href="@{/admin/changePassword}"><i
 								class="fa fa-gear fa-fw"></i> Settings</a></li>
