--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -38,7 +38,7 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
-<sec:authentication var="user" property="principal"></sec:authentication>
+	<sec:authentication var="user" property="principal"></sec:authentication>
 	<!-- Navigation section
 ================================================== -->
 	<section class="navbar navbar-fixed-top custom-navbar"
@@ -67,23 +67,12 @@
 							class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
 							class="caret"></strong></a>
 						<ul class="dropdown-menu">
-							<li><a href="/userProfile" style="color: black;"><i
+							<li><a th:href="@{/user/userProfile/} + ${#authentication.principal.userId}" style="color: black;"><i
 									class="fa fa-user fa-fw"></i>View Profile<br /> [<small
 									sec:authentication="name">[email]</small>] </a></li>
 							<li class="divider"></li>
-							<li><div th:switch="${#authentication.principal.userRole}">
-								<p th:case="ADMIN">
-									<a href="/admin/changePassword" style="color: black;"><i
-									class="fa fa-gear fa-fw"></i>Change Password</a>
-								</p>
-								<p th:case="MANAGER">
-									<a href="/admin/changePassword" style="color: black;"><i
-									class="fa fa-gear fa-fw"></i>Change Password</a>
-								</p>
-								<p th:case="USER">
-									<a href="/user/changePassword" style="color: black;"><i
-									class="fa fa-gear fa-fw"></i>Change Password</a>
-								</p></div></li>
+							<li><a href="/user/changePassword" style="color: black;"><i
+									class="fa fa-gear fa-fw"></i>Change Password</a></li>
 							<li class="divider"></li>
 							<li><a href="/logout" style="color: black;"><i
 									class="fa fa-sign-out fa-fw"></i>Logout</a></li>
@@ -95,7 +84,8 @@
 	<div class="register">
 		<div class="container">
 			<form action="#" th:action="@{/afterChangePassword}"
-				th:object="${changePasswordData}" method="post" onsubmit="return passwordFunction(this);">
+				th:object="${changePasswordData}" method="post"
+				onsubmit="return passwordFunction(this);">
 				<div class="row">
 					<div
 						class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
@@ -113,8 +103,9 @@
 						</div>
 						<span class="text-danger pull-left" id="error_id"></span>
 						<div class="inputDiv">
-							<input type="password" class="form-control input-lg" id="password_confirm"
-								name="cnfPassword" placeholder="Confirm New Password" />
+							<input type="password" class="form-control input-lg"
+								id="password_confirm" name="cnfPassword"
+								placeholder="Confirm New Password" />
 						</div>
 
 						<hr class="colorgraph" />
