--- a/src/main/resources/templates/pickupPointDetails.html
+++ b/src/main/resources/templates/pickupPointDetails.html
@@ -26,7 +26,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="page-header">Pick up Point Details<small>(Click on Id to update data)</small></h1>
+					<h1 class="page-header">Pick up Point Details<small>(Click on location to update data)</small></h1>
 				</div>
 			</div>
 			<!-- /. ROW  -->
@@ -53,7 +53,9 @@
 									<tbody>
 										<tr th:each="pickUpPoint : ${pickUpPointList}">
 											<td th:text="${pickUpPoint.pickUpPointId}"></td>
-											<td><a th:href="@{/admin/updatePickupPointDetails/} + ${pickUpPoint.pickUpPointId}" th:text="${pickUpPoint.location}"></a></td>
+											<td><a
+												th:href="@{/admin/updatePickupPointDetails/} + ${pickUpPoint.pickUpPointId}"
+												th:text="${pickUpPoint.location}"></a></td>
 											<td class="text-center" th:text="${pickUpPoint.maxCapacity}"></td>
 											<td class="text-center" th:text="${pickUpPoint.currentAvailability}"></td>
 											<td th:text="${pickUpPoint.addedOn}"></td>
