--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -78,7 +78,7 @@
 									Profile<br /> [<small sec:authentication="name">[email]</small>]
 							</a></li>
 							<li class="divider"></li>
-							<li><a href="/changePassword" style="color: black;"><i
+							<li><a href="/user/changePassword" style="color: black;"><i
 									class="fa fa-gear fa-fw"></i>Change Password</a></li>
 							<li class="divider"></li>
 							<li><a href="/logout" style="color: black;"><i
