Fixed some linking problem.

--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -201,10 +201,9 @@
 
 					<li><a th:href="@{/admin/adminHome}"><i
 							class="fa fa-dashboard "></i>Dashboard</a></li>
-					<li><a th:href="@{/admin/pricingAndPlans}"><i
+					<li><a th:href="@{#}"><i
 							class="fa fa-desktop "></i> Pricing and plans</a></li>
-					<li><a th:href="@{#}"><i class="fa fa-bar-chart-o "></i>Charts</a></li>
-					<li><a th:href="@{/admin/requests}"><i
+					<li><a th:href="@{#}"><i
 							class="fa fa-qrcode "></i>Requests</a></li>
 					<li><a th:href="@{/admin/userList}"><i
 							class="fa fa-table "></i>Users</a></li>
