--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -212,7 +212,7 @@
 							Pickup points<span class="fa arrow "></span></a>
 						<ul class="nav nav-second-level ">
 							<li><a th:href="@{/admin/addNewBicycle}">Add bicycle</a></li>
-							<li><a th:href="@{#}">Manage roles</a></li>
+							<li><a th:href="@{manageRole}">Manage roles</a></li>
 							<li><a th:href="@{#}">Pickup points<span
 									class="fa arrow"></span></a>
 								<ul class="nav nav-third-level ">
