--- a/src/main/resources/templates/pickupPointDetails.html
+++ b/src/main/resources/templates/pickupPointDetails.html
@@ -38,7 +38,7 @@
 						<div class="panel-heading">Details</div>
 						<div class="panel-body">
 							<div class="table-responsive">
-								<table class="table table-hover">
+								<table class="table table-hover table-striped">
 									<thead>
 										<tr>
 											<th>Id</th>
