--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -32,7 +32,7 @@
 					<div class="col-md-6">
 						<div class="panel panel-info">
 							<div class="panel-heading">
-								<h3>Issue Bicycle From <strong th:text="${user.role.pickUpPoint.location}"></strong></h3>
+								<h3>Issue Bicycle By <strong th:text="${user.firstName}"></strong></h3>
 							</div>
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
