Modified and fixed some mappings

--- a/src/main/resources/templates/bicycleTransfer.html
+++ b/src/main/resources/templates/bicycleTransfer.html
@@ -41,17 +41,15 @@
 										<fieldset>
 											<p>
 												<label>Transferred To</label> <input name="transferredTo"
-													th:field="*{transferredTo}" class="form-control"
-													required="required" />
+													class="form-control" required="required" />
 											</p>
 											<p>
 												<label>Quantity </label> <input name="quantity"
-													th:field="*{quantity}" class="form-control" maxlength="10" />
+													class="form-control" maxlength="10" />
 											</p>
 											<p>
 												<label>Vehicle No. </label> <input name="vehicleNo"
-													th:field="*{vehicleNo}" class="form-control"
-													required="required" />
+													class="form-control" required="required" />
 											</p>
 										</fieldset>
 										<div>
@@ -75,17 +73,16 @@
 									<fieldset>
 										<p>
 											<label> Transferred From </label> <input type="text"
-												name="transferredFrom" th:field="*{transferredFrom}"
-												class="form-control" required="required" />
+												name="transferredFrom" class="form-control"
+												required="required" />
 										</p>
 										<p>
 											<label>Quantity </label> <input name="quantity"
-												th:field="*{quantity}" class="form-control" maxlength="10" />
+												class="form-control" maxlength="10" />
 										</p>
 										<p>
 											<label>Vehicle No. </label> <input name="vehicleNo"
-												th:field="*{vehicleNo}" class="form-control"
-												required="required" />
+												class="form-control" required="required" />
 										</p>
 									</fieldset>
 									<div>
