--- a/src/main/resources/templates/searchUsers.html
+++ b/src/main/resources/templates/searchUsers.html
@@ -26,7 +26,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1 class="page-header">
-						User Details<small>(Click on User's Name to view user profile)</small>
+						User Details<br /> <small>(Click on User's Name to view
+							user profile or click on User's role to change role)</small>
 					</h1>
 				</div>
 			</div>
