--- a/src/main/resources/templates/updatePickupPointDetails.html
+++ b/src/main/resources/templates/updatePickupPointDetails.html
@@ -26,7 +26,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="page-header">Pick up Point Details</h1>
+					<h1 class="page-header">Update Pick up Point Details</h1>
 				</div>
 			</div>
 			<!-- /. ROW  -->
