Added client side validation and fixed some mapping error.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -300,7 +300,7 @@
 						data-wow-delay="0.3s">
 						<i class="icon-tools medium-icon"></i>
 						<h3>
-							<a href="registration.html">REGISTER</a>
+							<a href="register">REGISTER</a>
 						</h3>
 						<h5>From Anywhere</h5>
 						<hr />
