--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -71,15 +71,19 @@
 							<div class="col-md-6">
 								<div class="form-group">
 									<input type="text" name="firstName"
-										class="form-control input-lg" placeholder="First Name"
-										tabindex="1" required="required" />
+										class="form-control input-lg" pattern="[a-zA-Z ]{2,20}"
+										title="Please enter alphabet only. Size{min=2 , max=20}"
+										placeholder="First Name" tabindex="1" maxlength="20"
+										required="required" />
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 									<input type="text" name="lastName"
 										class="form-control input-lg" placeholder="Last Name"
-										tabindex="2" required="required" />
+										pattern="[a-zA-Z ]{2,20}"
+										title="Please enter alphabet only. Size{min=2 , max=20}"
+										tabindex="2" maxlength="20" required="required" />
 								</div>
 							</div>
 						</div>
@@ -87,28 +91,32 @@
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
-									<input type="email" name="email" id="emailId" class="form-control input-lg"
-										placeholder="Enter Email" tabindex="1" required="required" />
+									<input type="email" name="email" id="emailId"
+										class="form-control input-lg" placeholder="Enter Email"
+										title="Please Enter valid email" tabindex="3" maxlength="50"
+										required="required" />
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 									<input type="email" name="confirmUserEmail" id="email_confirm"
-										class="form-control input-lg" placeholder="Confirm Email"
-										tabindex="2" required="required" />
+										class="form-control input-lg" maxlength="50"
+										title="Please Enter valid email" placeholder="Confirm Email"
+										tabindex="4" required="required" />
 								</div>
 							</div>
 						</div>
 						<div class="form-group">
 							<input type="text" name="mobileNo" class="form-control input-lg"
-								placeholder="Enter Mobile No" tabindex="3" pattern="[0-9]{10}"
-								title="Enter Numbers Only" maxlength="10" required="required" />
+								placeholder="Enter Mobile No" tabindex="5" pattern="[0-9]{10}"
+								title="Enter 10 digits Number Only" maxlength="10"
+								required="required" />
 						</div>
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
 									<select class="form-control input-lg" name="proofType"
-										required="required">
+										tabindex="6" required="required">
 										<option value="">Select Proof Type:</option>
 										<option value="Driving Licence">Driving Licence</option>
 										<option value="Voter ID">Voter ID</option>
@@ -120,7 +128,9 @@
 							<div class="col-md-6">
 								<div class="form-group">
 									<input type="text" name="proofNo" class="form-control input-lg"
-										placeholder="Enter Proof Id" tabindex="6" required="required" />
+										placeholder="Enter Proof Id" pattern="[a-zA-Z0-9]{2,20}"
+										title="please enter alphabet and digits only.Size[min=2,max=20]" maxlength="20"
+										tabindex="7" required="required" />
 								</div>
 							</div>
 						</div>
@@ -128,7 +138,7 @@
 							<div class="col-md-6">
 								<div class="form-group">
 									<input type="file" name="document"
-										class="form-control input-lg" tabindex="1"
+										class="form-control input-lg" tabindex="8"
 										title="Upload Proof Document" required="required" />
 								</div>
 							</div>
@@ -136,20 +146,21 @@
 								<div class="form-group">
 									<input type="date" name="dateOfBirth"
 										class="form-control input-lg"
-										placeholder="Enter Date Of Birth" tabindex="2"
+										placeholder="Enter Date Of Birth" tabindex="9"
 										required="required" />
 								</div>
 							</div>
 						</div>
 						<div class="form-group">
 							<textarea name="userAddress" class="form-control input-lg"
-								placeholder="Enter Address" tabindex="3" rows="5"
-								required="required"></textarea>
+								placeholder="Enter Address" tabindex="10" rows="5"
+								maxlength="250" required="required"></textarea>
 						</div>
 						<div class="row">
 							<div class="col-md-3">
 								<p class="agreement input-lg">
-									<input type="checkbox" value="" required="required" /> I Agree
+									<input type="checkbox" value="" tabindex="11"
+										required="required" /> I Agree
 								</p>
 							</div>
 							<div class="col-md-9" align="left">
@@ -163,15 +174,13 @@
 						<div class="row">
 							<div class="col-md-6">
 								<a href="payment">
-									<button class="btn btn-primary btn-block btn-lg" tabindex="7">
+									<button class="btn btn-primary btn-block btn-lg" tabindex="12">
 										Pay Now</button>
 								</a>
-<!-- 								<input type="submit" value="Pay Now" -->
-<!-- 								class="btn btn-primary btn-block btn-lg" tabindex="7" /> -->
 							</div>
 							<div class="col-md-6">
 								<a href="login"> <input type="button" value="Sign In"
-									class="btn btn-success btn-block btn-lg" tabindex="7" />
+									class="btn btn-success btn-block btn-lg" tabindex="13" />
 								</a>
 							</div>
 						</div>
