--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -71,14 +71,14 @@
 						<hr class="colorgraph"></hr>
 						<div class="form-group">
 							<input type="email" name="email" class="form-control input-lg"
-								placeholder="Enter Email Id" tabindex="3"
+								placeholder="Enter Email Id" tabindex="1" maxlength="50"
 								title="Enter Valid Email Id" required="required" />
 						</div>
 
 						<div class="form-group">
 							<input type="password" name="password"
-								class="form-control input-lg" placeholder="Enter Password"
-								tabindex="3" required="required" />
+								class="form-control input-lg"  placeholder="Enter Password"
+								tabindex="2" required="required" />
 						</div>
 
 						<div>
