--- a/src/main/resources/templates/setPassword.html
+++ b/src/main/resources/templates/setPassword.html
@@ -61,20 +61,22 @@
 	<div class="register">
 		<div class="container">
 			<form action="#" th:action="@{/afterSetPassword}"
-				th:object="${setPasswordData}" method="post" onsubmit="return passwordFunction(this);">
+				th:object="${setPasswordData}" method="post"
+				onsubmit="return passwordFunction(this);">
 				<div class="row">
 					<div
 						class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 						<h2>Please set your Password</h2>
 						<hr class="colorgraph"></hr>
 						<div class="form-group">
-							<input type="password" name="password" id="password"
-								class="form-control input-lg" placeholder="Enter Password"
-								tabindex="3" required="required" />
+							<input type="password" name="password" pattern="*{4,16}"
+								maxlength="16" id="password" class="form-control input-lg"
+								placeholder="Enter Password" tabindex="1" required="required" />
 						</div>
 						<span class="text-danger pull-left" id="error_id"></span>
 						<div class="inputDiv">
-							<input type="password" class="form-control input-lg"
+							<input type="password" tabindex="2" pattern="*{4,16}"
+								maxlength="16" class="form-control input-lg"
 								id="password_confirm" name="cnfPassword"
 								placeholder="Enter Confirm Password" />
 						</div>
@@ -84,7 +86,7 @@
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3">
 								<input type="submit" value="Set Password"
-									class="btn btn-primary btn-block btn-lg" tabindex="7" />
+									class="btn btn-primary btn-block btn-lg" tabindex="3" />
 							</div>
 						</div>
 					</div>
