--- a/src/main/resources/templates/addNewBicycle.html
+++ b/src/main/resources/templates/addNewBicycle.html
@@ -46,7 +46,8 @@
 										<div class="control-group">
 											<label class="control-label">Chasis Nubmer</label>
 											<div class="controls">
-												<input type="text" name="chasisNo" placeholder=""
+												<input type="text" tabindex="1" maxlength="20"
+													name="chasisNo" placeholder=""
 													class="input-xlarge form-control" required="required" /> <span
 													class="help-block">The bicycle chasis no.</span>
 											</div>
@@ -55,8 +56,8 @@
 										<div class="control-group">
 											<label class="control-label">Add to</label>
 											<div class="controls">
-												<select class="input-xlarge form-control" name="pickUpPoint"
-													required="required">
+												<select tabindex="2" class="input-xlarge form-control"
+													name="pickUpPoint" required="required">
 													<option value="">Select Pickup Point</option>
 													<option th:each="pickUpPoint : ${pickUpPoints}"
 														th:value="${pickUpPoint.pickUpPointId}"
@@ -68,7 +69,7 @@
 
 										<div class="control-group">
 											<div class="controls">
-												<button type="submit" class="btn btn-primary">Add
+												<button type="submit" tabindex="3" class="btn btn-primary">Add
 													bicycle</button>
 											</div>
 										</div>
