--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -67,9 +67,11 @@
 							class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
 							class="caret"></strong></a>
 						<ul class="dropdown-menu">
-							<li><a th:href="@{/user/userProfile/} + ${#authentication.principal.userId}" style="color: black;"><i
-									class="fa fa-user fa-fw"></i>View Profile<br /> [<small
-									sec:authentication="name">[email]</small>] </a></li>
+							<li><a
+								th:href="@{/user/userProfile/} + ${#authentication.principal.userId}"
+								style="color: black;"><i class="fa fa-user fa-fw"></i>View
+									Profile<br /> [<small sec:authentication="name">[email]</small>]
+							</a></li>
 							<li class="divider"></li>
 							<li><a href="/user/changePassword" style="color: black;"><i
 									class="fa fa-gear fa-fw"></i>Change Password</a></li>
@@ -92,18 +94,21 @@
 						<h2>Change Password</h2>
 						<hr class="colorgraph"></hr>
 						<div class="form-group">
-							<input type="password" name="oldPassword"
-								class="form-control input-lg" placeholder="Enter Old Password"
-								tabindex="3" required="required" />
+							<input type="password" name="oldPassword" pattern="*{4,16}"
+								maxlength="16" class="form-control input-lg"
+								placeholder="Enter Old Password" tabindex="1"
+								required="required" />
 						</div>
 						<div class="form-group">
-							<input type="password" name="newPassword" id="password"
-								class="form-control input-lg" placeholder="Enter New Password"
-								tabindex="3" required="required" />
+							<input type="password" name="newPassword" pattern="*{4,16}"
+								maxlength="16" id="password" class="form-control input-lg"
+								placeholder="Enter New Password" tabindex="2"
+								required="required" />
 						</div>
 						<span class="text-danger pull-left" id="error_id"></span>
 						<div class="inputDiv">
-							<input type="password" class="form-control input-lg"
+							<input type="password" tabindex="3" pattern="*{4,16}"
+								maxlength="16" class="form-control input-lg"
 								id="password_confirm" name="cnfPassword"
 								placeholder="Confirm New Password" />
 						</div>
@@ -112,7 +117,7 @@
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3">
 								<input type="submit" value="Change Password"
-									class="btn btn-primary btn-block btn-lg" tabindex="7" />
+									class="btn btn-primary btn-block btn-lg" tabindex="4" />
 							</div>
 						</div>
 					</div>
