--- a/src/main/resources/templates/updatePickupPointDetails.html
+++ b/src/main/resources/templates/updatePickupPointDetails.html
@@ -37,56 +37,60 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">Enter new data</div>
 						<div class="panel-body">
-						<div class="col-sm-6">
-							<form action="#" th:action="@{/admin/updatePickupPointDetails}"
-								th:object="${pickupPointData}" method="post"
-								class="form-horizontal">
-								<div class="control-group">
-									<label class="control-label">Id</label>
-									<div class="controls">
-										<input type="text" name="pickUpPointId" th:value="${pickUpPoint.pickUpPointId}"
-											class="input-xlarge form-control" required="required"
-											readonly="readonly" /> <span class="help-block">Id of
-											the pick up point you chose</span>
+							<div class="col-sm-6">
+								<form action="#" th:action="@{/admin/updatePickupPointDetails}"
+									th:object="${pickupPointData}" method="post"
+									class="form-horizontal">
+									<div class="control-group">
+										<label class="control-label">Id</label>
+										<div class="controls">
+											<input type="text" tabindex="1" name="pickUpPointId"
+												th:value="${pickUpPoint.pickUpPointId}"
+												class="input-xlarge form-control" required="required"
+												readonly="readonly" /> <span class="help-block">Id
+												of the pick up point you chose</span>
+										</div>
 									</div>
-								</div>
 
-								<div class="control-group">
-									<label class="control-label">Location</label>
-									<div class="controls">
-										<textarea th:text="${pickUpPoint.location}" name="location"
-											class="input-xlarge form-control" required="required"></textarea>
-										<span class="help-block">Location of the Pick up Point</span>
+									<div class="control-group">
+										<label class="control-label">Location</label>
+										<div class="controls">
+											<textarea th:text="${pickUpPoint.location}" tabindex="2"
+												maxlength="250" name="location" class="input-xlarge form-control"
+												required="required"></textarea>
+											<span class="help-block">Location of the Pick up Point</span>
+										</div>
 									</div>
-								</div>
 
-								<div class="control-group">
-									<label class="control-label">Max capacity</label>
-									<div class="controls">
-										<input type="text" th:value="${pickUpPoint.maxCapacity}" name="maxCapacity"
-											class="input-xlarge form-control" required="required" /> <span
-											class="help-block">The maximum no. of bicycle this
-											pick up point can hold</span>
+									<div class="control-group">
+										<label class="control-label">Max capacity</label>
+										<div class="controls">
+											<input type="number" tabindex="3" maxlength="3"
+												th:value="${pickUpPoint.maxCapacity}" name="maxCapacity"
+												class="input-xlarge form-control" required="required" /> <span
+												class="help-block">The maximum no. of bicycle this
+												pick up point can hold</span>
+										</div>
 									</div>
-								</div>
 
-								<div class="control-group">
-									<label class="control-label">Is active</label>
-									<div class="controls">
-										<select name="isActive" class="input-xlarge form-control" required="required">
-											<option th:value="true">Yes</option>
-											<option th:value="false">No</option>
-										</select> <span class="help-block">Is this Pick up point active</span>
+									<div class="control-group">
+										<label class="control-label">Is active</label>
+										<div class="controls">
+											<select name="isActive" tabindex="4"
+												class="input-xlarge form-control" required="required">
+												<option th:value="true">Yes</option>
+												<option th:value="false">No</option>
+											</select> <span class="help-block">Is this Pick up point active</span>
+										</div>
 									</div>
-								</div>
 
-								<div class="control-group">
-									<div class="controls">
-										<button type="submit" class="btn btn-primary">Update
-											Pick up Point</button>
+									<div class="control-group">
+										<div class="controls">
+											<button type="submit" tabindex="5" class="btn btn-primary">Update
+												Pick up Point</button>
+										</div>
 									</div>
-								</div>
-							</form>
+								</form>
 							</div>
 						</div>
 					</div>
